<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <android.support.constraint.ConstraintLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ll_title_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MovieTitle">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/details_title_padding_vertical"
                    android:paddingLeft="@dimen/details_title_padding_horizontal"
                    android:paddingRight="@dimen/details_title_padding_horizontal"
                    android:paddingTop="@dimen/details_title_padding_vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <ImageView
                    android:id="@+id/iv_favorite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/details_favorite_icon_margin"
                    android:layout_marginBottom="@dimen/details_favorite_icon_margin" />

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="@dimen/thumbnail_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_title_block"
                android:layout_marginBottom="@dimen/details_margin_horizontal"
                android:layout_marginEnd="@dimen/details_margin_vertical"
                android:layout_marginStart="@dimen/details_margin_vertical"
                android:layout_marginTop="@dimen/details_margin_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_thumbnail_content_description" />

            <TextView
                android:id="@+id/tv_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iv_thumbnail"
                android:layout_below="@id/ll_title_block"
                android:layout_toEndOf="@id/iv_thumbnail"
                android:text="@string/release_date_label"
                android:theme="@style/Label" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_release_date_label"
                android:layout_marginEnd="@dimen/details_margin_horizontal"
                android:layout_toEndOf="@+id/iv_thumbnail"
                android:theme="@style/Text" />

            <TextView
                android:id="@+id/tv_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_release_date"
                android:layout_marginTop="@dimen/details_margin_vertical"
                android:layout_toEndOf="@id/iv_thumbnail"
                android:text="@string/rating_label"
                android:theme="@style/Label" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_release_date"
                android:layout_below="@id/tv_rating_label"
                android:layout_marginBottom="@dimen/details_margin_vertical"
                android:theme="@style/Text" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_thumbnail"
                android:layout_marginEnd="@dimen/details_description_margin"
                android:layout_marginStart="@dimen/details_description_margin"
                android:layout_marginBottom="@dimen/details_description_margin"
                android:theme="@style/Text" />


            <LinearLayout
                android:id="@+id/trailers_label_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/border_height"
                    android:background="@color/colorDivider"/>

                <TextView
                    android:id="@+id/tv_trailers_label"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/group_height"
                    android:text="@string/label_trailers"
                    android:theme="@style/Group" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/border_height"
                    android:background="@color/colorDivider"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailers_label_group"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/reviews_label_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_trailers"
                android:theme="@style/Group">

                <TextView
                    android:id="@+id/tv_reviews_header"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:text="@string/reviews_header_default_text"/>

                <ImageView
                    android:id="@+id/iv_header_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="parent"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>

            </android.support.constraint.ConstraintLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expandable_reviews_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reviews_label_group"
                android:layout_marginStart="@dimen/reviews_padding"
                android:layout_marginEnd="@dimen/reviews_padding">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_trailers_label" />

            </net.cachapa.expandablelayout.ExpandableLayout>
        </RelativeLayout>
    </ScrollView>
</layout>